--- a/src/styles/components/projectspage.sass
+++ b/src/styles/components/projectspage.sass
@@ -6,15 +6,16 @@ h2
   font-size: 2.2rem
   margin-bottom: 2rem 
   @include mixins.center
-  justify-content: start
+  align-self: start
+  display: flex 
+  align-items: center  
+  text-align: row
 
   &:after
     @include mixins.gradient-border
 
-
 .projects
   @include mixins.center
-  text-align: center
   padding: 20px
   flex-direction: column  
   margin-top: -30px
@@ -23,13 +24,11 @@ h2
 .project-grid
   display: flex
   flex-wrap: wrap
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr))
   gap: 20px
-  flex-direction: row  
   border-radius: 5px
   
-
 .project-card
+  flex: 1 1 300px  
   padding: 10px
   border-radius: 5px
   overflow: hidden  
@@ -51,3 +50,4 @@ h2
     padding: 2rem 0
     border-radius: 10px
     text-decoration: none
+    text-align: center
